--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,35 @@
-version: '3.8'
-
 services:
+  backend:
+    build: 
+      context: ./backend
+      dockerfile: docker/Dockerfile
+    container_name: challenge-backend
+    ports:
+      - "8080:8080"
+    env_file:
+      - ./backend/.env
+    networks:
+      - challenge-network
+
+  frontend:
+    build:
+      context: ./frontend
+      dockerfile: docker/Dockerfile
+    container_name: challenge-frontend
+    ports:
+      - "4200:80"
+    depends_on:
+      - backend
+    networks:
+      - challenge-network
+
   postgres:
     image: postgres:15
     container_name: godlevel-db
     environment:
       POSTGRES_DB: challenge_db
       POSTGRES_USER: challenge
-      POSTGRES_PASSWORD: challenge_2024
+      POSTGRES_PASSWORD: challenge_2025
     ports:
       - "5432:5432"
     volumes:
@@ -18,6 +40,8 @@ services:
       interval: 5s
       timeout: 5s
       retries: 5
+    networks:
+      - challenge-network
 
   data-generator:
     build:
@@ -37,7 +61,9 @@ services:
         python generate_data.py --db-url postgresql://challenge:challenge_2024@postgres:5432/challenge_db
       "
     profiles:
-      - tools
+      - initialization
+    networks:
+      - challenge-network
 
   pgadmin:
     image: dpage/pgadmin4:latest
@@ -51,10 +77,15 @@ services:
     depends_on:
       - postgres
     profiles:
-      - tools
       - debug
+    networks:
+      - challenge-network
 
 volumes:
   postgres_data:
     driver: local
+
+networks:
+  challenge-network:
+    driver: bridge
 
