--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=god-level-challenge
+server.port=${SPRING_SERVER_PORT:8080}
+spring.profiles.active=${SPRING_ACTIVE_PROFILE:dev}
+
