--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,14 +20,19 @@ services:
   frontend:
     build:
       context: ./frontend
-      dockerfile: docker/Dockerfile
+      dockerfile: docker/${FRONTEND_DOCKER_FILE}
     container_name: challenge-frontend
     ports:
-      - "4200:80"
+      - "4200:${FRONTEND_CONTAINER_PORT}"
     depends_on:
       - backend
     networks:
       - challenge-network
+    volumes:
+      - ./frontend:/frontend
+      - '/frontend/node_modules'
+    environment:
+      - CHOKIDAR_USEPOLLING=true
 
   postgres:
     image: postgres:15
