--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,7 +45,6 @@ services:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
-      - ./database-schema.sql:/docker-entrypoint-initdb.d/01-schema.sql
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U challenge -d challenge_db"]
       interval: 5s
@@ -60,6 +59,8 @@ services:
       dockerfile: Dockerfile
     container_name: godlevel-data-gen
     depends_on:
+      backend:
+        condition: service_started
       postgres:
         condition: service_healthy
     environment:
