frontend: added css config to Dockerfile
Change-Id: I33d17239a8d1beacebf0c03ec3d8dfe87427c7ea

--- a/frontend/docker/Dockerfile.dev
+++ b/frontend/docker/Dockerfile.dev
@@ -4,6 +4,8 @@ FROM node:22-alpine AS build
 WORKDIR /frontend
 
 COPY package*.json ./
+COPY .postcssrc.json ./
+COPY tsconfig*.json ./
 
 RUN npm install -g @angular/cli && npm install
 
