--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -2,7 +2,7 @@ services:
   backend:
     build: 
       context: ./backend
-      dockerfile: docker/${BACKEND_DOCKER_FILE}
+      dockerfile: docker/Dockerfile.dev
     container_name: challenge-backend
     ports:
       - "8080:8080"
@@ -21,7 +21,7 @@ services:
   frontend:
     build:
       context: ./frontend
-      dockerfile: docker/${FRONTEND_DOCKER_FILE}
+      dockerfile: docker/Dockerfile.dev
     container_name: challenge-frontend
     ports:
       - "4200:${FRONTEND_CONTAINER_PORT}"
