--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=god-level-challenge
 server.port=${SPRING_SERVER_PORT:8080}
-spring.profiles.active=${SPRING_ACTIVE_PROFILE:dev}
+spring.profiles.active=${SPRING_ACTIVE_PROFILE:prod}
 
 spring.liquibase.enabled=true
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.sql
