--- a/backend/.example.dev.env
+++ b/backend/.example.dev.env
@@ -2,4 +2,5 @@ SPRING_SERVER_PORT=8080
 SPRING_ACTIVE_PROFILE=dev
 SPRING_DATASOURCE_URL=jdbc:postgresql://postgres:5432/challenge_db
 SPRING_DATASOURCE_USERNAME=challenge
-SPRING_DATASOURCE_PASSWORD=challenge_2025
+SPRING_DATASOURCE_PASSWORD=challenge_2024
+SPRING_DOCKER_FILE=Dockerfile.dev
